--- a/src/componants/bestproducts/productslider/productSlider.scss
+++ b/src/componants/bestproducts/productslider/productSlider.scss
@@ -10,8 +10,9 @@
 
     .chair-image {
       position: absolute;
-      left: 10px;
-      top: -86px;
+      left: 25px;
+      right: 25px;
+      bottom: 33px;
     }
   }
   .main-product-text {
