--- a/src/componants/bestproducts/ProductSection.scss
+++ b/src/componants/bestproducts/ProductSection.scss
@@ -19,6 +19,11 @@
       border-radius: 44px;
       border: none !important;
       width: 348px;
+
+      @media screen and (max-width : 768px) {
+        width: auto;
+        
+      }
       .white-bg {
         background: #ffffff;
         border-radius: 32px;
@@ -39,6 +44,7 @@
     justify-content: center;
     padding-top: 60px;
     @media screen and (max-width: 998px) {
+      padding-top:0px;
     }
 
     .yellow-text {
