--- a/src/componants/chooseus/ChooseOption.scss
+++ b/src/componants/chooseus/ChooseOption.scss
@@ -10,6 +10,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 120px 0px 120px 0px!important;
+      margin: auto;
     }
     @media screen and (max-width: 768px) {
       padding: 120px 0px 120px 0px;
@@ -38,6 +40,7 @@
   .subtitle-text {
     @include chooseSubtitleStyle();
     padding-top: 20px;
+    padding-right: 0px;
   }
   .yellow-container {
     @media screen and (max-width: 998px) {
@@ -50,6 +53,11 @@
     }
     .yellowArrow {
       padding: 10px 0px 0px 13px;
+
+      @media screen and (max-width :768px){
+        padding: 10px 0px 0px 0px!important;
+        
+      }
     }
   }
 }
