--- a/src/componants/common/Header/Header.scss
+++ b/src/componants/common/Header/Header.scss
@@ -1,6 +1,9 @@
 @import "../../../assets//scss//mixins.scss";
 .navbar-main {
   padding: 40px 0 0 80px;
+  @media (max-width : 576px){
+    padding: 20px 0 0 20px;
+  }
 
   .nav-gap {
     gap: 62px;
