--- a/src/componants/testimonials/slider/SliderMain.scss
+++ b/src/componants/testimonials/slider/SliderMain.scss
@@ -1,19 +1,27 @@
 .slider-container {
-    .main-slider-container {
-    
-    }
-    .slick-prev {
-      width: 79px;
-      left: -37px;
-      height: 100px;
-      z-index: 99999;
-    }
-    .slick-next{
-      height: 100px;
-      z-index: 99999;
-      width: 79px;
-      right: 14px;
-  
+  @media screen and (max-width: 768px) {
+    padding-top: 0px;
+    margin: auto;
+  }
+  .slick-prev {
+    width: 79px;
+    left: -40px;
+    height: 100px;
+    z-index: 99999;
+  }
+  .slick-next {
+    height: 100px;
+    z-index: 99999;
+    width: 79px;
+    right: 24px;
+    @media screen and (max-width: 420px) {
+      right: -20px;
     }
   }
-  
+  .slick-slide {
+    @media (max-width: "1300px") {
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
