--- a/src/componants/testimonials/cardcontainer/FirstCard.scss
+++ b/src/componants/testimonials/cardcontainer/FirstCard.scss
@@ -4,7 +4,8 @@
 .main-card-container {
   .main-image-container {
     background-image: url("../../../assets/images//test1.svg");
-    width: 370px;
+    min-width: 370px;
+    width: 100%;
     height: 476px;
     position: relative;
 
