data added and changes done

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -5,3 +5,14 @@
 body {
   font-family: "Gilroy-Bold" !important;
 }
+
+.row {
+  --bs-gutter-x: 0;
+}
+.col {
+  margin: 0;
+  padding: 0;
+}
+.container-fluid {
+  --bs-gutter-x: 0;
+}
