--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -79,7 +79,7 @@
   opacity: 0.8;
 }
 @mixin footerYellowText {
-  font-family: "DM Sans";
+  font-family: "DM Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
