--- a/src/componants/bestproducts/productslider/productSlider.scss
+++ b/src/componants/bestproducts/productslider/productSlider.scss
@@ -1,5 +1,6 @@
 .main-card-container {
-  width: 268.09px;
+  // width: 268.09px;
+  width: 100%;
   height: 492px;
   .card-background {
     background: #fafafa;
