--- a/src/componants/bestproducts/ProductSection.scss
+++ b/src/componants/bestproducts/ProductSection.scss
@@ -42,7 +42,7 @@
   }
   .yellow-container {
     justify-content: center;
-    padding-top: 60px;
+    padding: 10px 0 50px 0;
     @media screen and (max-width: 998px) {
       padding-top:0px;
     }
