--- a/src/componants/common/Header/Header.scss
+++ b/src/componants/common/Header/Header.scss
@@ -2,7 +2,7 @@
 .navbar-main {
   padding: 40px 0 0 80px;
   @media (max-width: 576px) {
-    padding: 20px 0 0 20px;
+    padding: 20px 0 0 10px;
   }
   .navbar-toggler-dark {
     background-color: #333;
@@ -27,6 +27,9 @@
     @media screen and (max-width: 998px) {
       gap: 10px;
     }
+    @media screen and (max-width: 768px) {
+      order: 2 !important;
+    }
     .bag-main {
       position: relative;
       width: 30px;
@@ -35,6 +38,16 @@
         right: -3px;
         top: 5px;
       }
+    }
+  }
+  .nav-collap {
+    @media screen and (max-width: 768px) {
+      order: 1;
+    }
+  }
+  .nav-tog {
+    @media screen and (max-width: 768px) {
+      order: 3;
     }
   }
 }
