--- a/src/componants/testimonials/cardcontainer/FirstCard.scss
+++ b/src/componants/testimonials/cardcontainer/FirstCard.scss
@@ -8,6 +8,7 @@
     width: 100%;
     height: 476px;
     position: relative;
+    background-repeat: no-repeat;
 
     .white-bg {
       background-image: url("../../../assets//images/Union.svg");
